update readme, update repository link

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,7 +46,7 @@
 	<div class="panel-body">&copy; 2015 Dmitry
 	R. <i class="mdi-content-content-paste"></i>Preacher for the
 	sake of example 
-	meteor js application.</div>
+	meteor js application. <a href="https://github.com/noroot/preacher" target="_blank">Source code can be found here github.com/noroot/preacher</a></div>
       </div>
     </div>
   </div>
